@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="4.0.3" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="4.0.4" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="script.module.requests" version="2.19.1" />
@@ -34,13 +34,11 @@
 			<screenshot>resources/screenshots/screenshot003.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v4.0.3 - Aug. 02, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Added new Pack file size calc. function.  This will
-    take the current pack file and calculate the approx. size
-    of each episode inside the pack.  This will also vary
-    based on show Packs that are ranges ex. 1-7 when
-    there are 9 total season.  Only season 1-7 will be
-    accounted for in that case.[/I]
+[B][COLOR red]Update - v4.0.4 - Aug. 02, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Sorry folks completely forgot about .strm library file
+    playback with the new pack file work, they were badly
+    broken.  This is now fixed including resolving of pack
+    files from library as well.[/I]
 		</news>
 	</extension>
 </addon>
